初始化个人主页仓库

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-    <title>ýÉùÒÀ¾É</title>
+    <title>æ¿¤å£°ä¾æ—§</title>
 </head>
 <body>
-ÎÒÊÇýÉùÒÀ¾É£¬ÎÒµÄÖ÷Ò³ÊÇwww.teaur.comÕâÀïÏÈËæ±ãÐ´¼¸¾ä£¬×öÎª²âÊÔ£¬ÒÔºóÔÙ×öÐÞ¸Ä¡£
+æˆ‘æ˜¯æ¿¤å£°ä¾æ—§ï¼Œæˆ‘çš„ä¸»é¡µæ˜¯www.teaur.comè¿™é‡Œå…ˆéšä¾¿å†™å‡ å¥ï¼Œåšä¸ºæµ‹è¯•ï¼Œä»¥åŽå†åšä¿®æ”¹ã€‚
 </body>
 </html>
