--- a/index.html
+++ b/index.html
@@ -1,10 +1,81 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>濤声依旧</title>
+    <meta name="Keywords"
+          content="濤声依旧,陶涛的主页,陶涛的博客,陶涛CSDN,AndPermission,Album,SwipeRecyclerView,AndServer"/>
+    <meta name="Description"
+          content="热爱科学，热爱生活，我是涛儿！"/>
+
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
+    <link href="./assets/bundle.css" rel="stylesheet">
+    <script>
+        (function () {
+            var bp = document.createElement('script');
+            var curProtocol = window.location.protocol.split(':')[0];
+            if (curProtocol === 'https') {
+                bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+            }
+            else {
+                bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+            }
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(bp, s);
+        })();
+    </script>
+    <style>
+        .comment {
+            width: 95%;
+            margin: 0 auto;
+        }
+		.beian-height {
+    			height:20px;
+    			line-height:20px;
+		}
+        .beian-color {
+				color:#939393;
+		}
+		.beian-a {
+				display:inline-block;
+				text-decoration:none;
+		}
+        @media (min-width: 768px) {
+            .comment {
+                width: 60%;
+                margin: 0 auto;
+            }
+        }
+    </style>
 </head>
 <body>
-我是濤声依旧，我的主页是www.teaur.com这里先随便写几句，做为测试，以后再做修改。
+<div id="app" align="center"></div>
+<script src="./assets/bundle.js"></script>
+<script src="./assets/mouse.js"></script>
+
+<div id="comment" class="comment" align="center">
+    <div id="SOHUCS"></div>
+</div>
+<script charset="utf-8" type="text/javascript" src="https://changyan.sohu.com/upload/changyan.js" ></script>
+<script type="text/javascript">
+    window.changyan.api.config({
+        appid: 'cyt39Pcz0',
+        conf: 'prod_9d7b31baa9ee073b08126a5950a3260e'
+    });
+</script>
+
+<div style="display: none;">
+    <script src="http://s11.cnzz.com/z_stat.php?id=1260557333&web_id=1260557333"></script>
+</div>
+<div class="beian-height" style="width:300px;margin:0 auto;padding: 20px 0;" align="center">
+	<p class="beian-height beian-color" style="width:180px;margin:0 auto;" align="center">创意网页设计中...</p>
+    <a class="beian-a" target="_blank" href="https://github.com/taotao568685">
+        <img src="https://avatars3.githubusercontent.com/u/6822663?s=460&v=4" width="60" height="60" style="float:left;"/>
+        <p class="beian-color" style="float:left;margin: 0px 5px;">taotao568685的github</p>
+    </a>
+</div>
 </body>
 </html>
+
