--- a/index.html
+++ b/index.html
@@ -10,26 +10,9 @@
           content="热爱科学，热爱生活，我是涛儿！"/>
 </head>
 <body>
-<div id="app" align="center"></div>
-<script src="./assets/bundle.js"></script>
-<script src="./assets/mouse.js"></script>
 
-<div id="comment" class="comment" align="center">
-    <div id="SOHUCS"></div>
-</div>
-<script charset="utf-8" type="text/javascript" src="https://changyan.sohu.com/upload/changyan.js" ></script>
-<script type="text/javascript">
-    window.changyan.api.config({
-        appid: 'cyt39Pcz0',
-        conf: 'prod_9d7b31baa9ee073b08126a5950a3260e'
-    });
-</script>
-
-<div style="display: none;">
-    <script src="http://s11.cnzz.com/z_stat.php?id=1260557333&web_id=1260557333"></script>
-</div>
 <div class="beian-height" style="width:300px;margin:0 auto;padding: 20px 0;" align="center">
-	<p class="beian-height beian-color" style="width:180px;margin:0 auto;" align="center">创意网页设计中...</p>
+	<p class="beian-height beian-color" style="width:180px;margin:0 auto;" align="center">个人主页设计中...</p>
     <a class="beian-a" target="_blank" href="https://github.com/taotao568685">
         <img src="https://avatars3.githubusercontent.com/u/6822663?s=460&v=4" width="60" height="60" style="float:left;"/>
         <p class="beian-color" style="float:left;margin: 0px 5px;">taotao568685的github</p>
